<resources>
    <string name="app_name">Yoga Fitness</string>
    <string name="blank" />
    <string name="exercises">Exercises</string>
    <string name="title_activity_list_exercises">List Exercises</string>
    <string name="view_exercises">View Exercises</string>
    <string name="title_activity_view_exercise_view">Name of Exercise</string>
    <string name="name_of_exercise">Name of Exercise</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="_20">20</string>
    <string name="todo">TODO</string>
    <string name="title_activity_alarm_view">Daily Alarm</string>
    <string name="title_activity_calendar_view">Calendar</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save">Save</string>
</resources>
