<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Views.ViewExerciseView">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/title"
        android:text="@string/name_of_exercise"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_below="@id/title"
        android:id="@+id/detail_image"
        android:src="@drawable/chair_pose"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:layout_marginTop="10dp"
        android:text="@string/_20"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_below="@id/detail_image"
        android:layout_centerInParent="true"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        />

    <Button
        android:id="@+id/btnStart"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_exercise"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>