<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.AlarmView"
    tools:showIn="@layout/activity_alarm_view">
    
   <!-- <android.support.v7.widget.CardView
        android:padding="16dp"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"        
        >
        
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
           &lt;!&ndash;
            <RadioButton
                android:layout_width=""
                android:layout_height="" />            
&ndash;&gt;

        </RadioGroup>
        
        
        
    </android.support.v7.widget.CardView>
-->

    <ToggleButton
        android:id="@+id/switchAlarm"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TimePicker>


    <Button
        android:id="@+id/btnSave"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    

</RelativeLayout>